SERVER-67385 Range deletion tasks on primary must not be scheduled before ongoing queries finish